{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1014,
  "lineage": "b223fc01-8f00-368d-32ca-de888a5bddce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bed61dbc520cfd1c",
            "association_id": "eipassoc-02eaf35d6937e3aee",
            "domain": "vpc",
            "id": "eipalloc-0bed61dbc520cfd1c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02c32f5ab635c7852",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-34-193-248-194.compute-1.amazonaws.com",
            "public_ip": "34.193.248.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-eip-1",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-eip-1",
              "Project": "Clixx Retail"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094fc1bbeca59d844",
            "association_id": "eipassoc-0197c65d8a2e4f5ea",
            "domain": "vpc",
            "id": "eipalloc-094fc1bbeca59d844",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0643680d8b53d3535",
            "private_dns": "ip-10-0-2-216.ec2.internal",
            "private_ip": "10.0.2.216",
            "public_dns": "ec2-3-234-163-146.compute-1.amazonaws.com",
            "public_ip": "3.234.163.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-eip-2",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-eip-2",
              "Project": "Clixx Retail"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:internet-gateway/igw-091fa7634608d9be6",
            "id": "igw-091fa7634608d9be6",
            "owner_id": "924305315126",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-igw",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-igw",
              "Project": "Clixx Retail"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "clixx_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:loadbalancer/app/clixx-alb/583c63882603ffbf",
            "arn_suffix": "app/clixx-alb/583c63882603ffbf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "clixx-alb-1940563691.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:924305315126:loadbalancer/app/clixx-alb/583c63882603ffbf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "clixx-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-061d7c0cfb7150cd5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ceb967bf88c837d8"
              },
              {
                "subnet_id": "subnet-0f880b7d48ad89ae2"
              }
            ],
            "subnets": [
              "subnet-0ceb967bf88c837d8",
              "subnet-0f880b7d48ad89ae2"
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "ManagedBy": "Terraform",
              "Name": "clixx-alb",
              "Project": "Clixx Retail",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "ManagedBy": "Terraform",
              "Name": "clixx-alb",
              "Project": "Clixx Retail",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "vpc_id": "vpc-026a6d22a73033461",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "clixx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:924305315126:targetgroup/clixx-target-group/a56e136d5b39a31e",
            "arn_suffix": "targetgroup/clixx-target-group/a56e136d5b39a31e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-499",
                "path": "/health.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:924305315126:targetgroup/clixx-target-group/a56e136d5b39a31e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "clixx-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "ManagedBy": "Terraform",
              "Name": "clixx-target-group",
              "Project": "Clixx Retail",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "ManagedBy": "Terraform",
              "Name": "clixx-target-group",
              "Project": "Clixx Retail",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bed61dbc520cfd1c",
            "association_id": "eipassoc-02eaf35d6937e3aee",
            "connectivity_type": "public",
            "id": "nat-00188b26939f37a65",
            "network_interface_id": "eni-02c32f5ab635c7852",
            "private_ip": "10.0.1.57",
            "public_ip": "34.193.248.194",
            "subnet_id": "subnet-0f880b7d48ad89ae2",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-gateway-1",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-gateway-1",
              "Project": "Clixx Retail"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094fc1bbeca59d844",
            "association_id": "eipassoc-0197c65d8a2e4f5ea",
            "connectivity_type": "public",
            "id": "nat-00d9fd727f4ba9145",
            "network_interface_id": "eni-0643680d8b53d3535",
            "private_ip": "10.0.2.216",
            "public_ip": "3.234.163.146",
            "subnet_id": "subnet-0ceb967bf88c837d8",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-gateway-2",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-nat-gateway-2",
              "Project": "Clixx Retail"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:route-table/rtb-0959d0cf85fe959ce",
            "id": "rtb-0959d0cf85fe959ce",
            "owner_id": "924305315126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00188b26939f37a65",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-route-table-1",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-route-table-1",
              "Project": "Clixx Retail"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:route-table/rtb-0766d49c66a3403ed",
            "id": "rtb-0766d49c66a3403ed",
            "owner_id": "924305315126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d9fd727f4ba9145",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-route-table-2",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-route-table-2",
              "Project": "Clixx Retail"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022706223719beb5d",
            "route_table_id": "rtb-0959d0cf85fe959ce",
            "subnet_id": "subnet-03366959dfe4f4a56"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053ddd6a1df40f3b6",
            "route_table_id": "rtb-0766d49c66a3403ed",
            "subnet_id": "subnet-0b1d1a42731d51bb4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-061d7c0cfb7150cd5",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061d7c0cfb7150cd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "clixx-alb-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "clixx-alb-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "clixx-alb-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-0e23031127a7f24da",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e23031127a7f24da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access to bastion host",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access to bastion host",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access to bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow all TCP traffic between instances in this security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "clixx-bastion-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "clixx-bastion-sg",
              "Project": "Clixx Retail"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "clixx-bastion-sg",
              "Project": "Clixx Retail"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-022f493b27a04afc7",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022f493b27a04afc7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061d7c0cfb7150cd5"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061d7c0cfb7150cd5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23031127a7f24da"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "clixx-ec2-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "clixx-ec2-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "clixx-ec2-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-0019895b8ad03a05e",
            "description": "Security group for EFS Mount Targets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0019895b8ad03a05e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "NFS from VPC CIDR",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "NFS from Bastion hosts",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23031127a7f24da"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "NFS from EC2 instances",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022f493b27a04afc7"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "clixx-efs-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "clixx-efs-sg",
              "Owner": "Richard.claye@gmail.com",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "clixx-efs-sg",
              "Owner": "Richard.claye@gmail.com",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:security-group/sg-035ecbe79148610ea",
            "description": "Security group for RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035ecbe79148610ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from Bastion Host",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e23031127a7f24da"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022f493b27a04afc7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "clixx-rds-sg",
            "name_prefix": "",
            "owner_id": "924305315126",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "clixx-rds-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "clixx-rds-sg",
              "Stackteam": "StackCloud13",
              "owner": "richard.claye@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-03366959dfe4f4a56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03366959dfe4f4a56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-app-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "ApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-app-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "ApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0b1d1a42731d51bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1d1a42731d51bb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-app-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "ApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-app-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "ApplicationServers",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0674984273ad088aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0674984273ad088aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-db-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "RDSDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-db-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "RDSDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0f1a39e2d9ea2e573",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1a39e2d9ea2e573",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-db-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "RDSDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-private-db-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "RDSDatabase",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0f880b7d48ad89ae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f880b7d48ad89ae2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "LoadBalancer-Bastion",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-subnet-1",
              "Project": "Clixx Retail",
              "Purpose": "LoadBalancer-Bastion",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:subnet/subnet-0ceb967bf88c837d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceb967bf88c837d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924305315126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "LoadBalancer-Bastion",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "clixx-public-subnet-2",
              "Project": "Clixx Retail",
              "Purpose": "LoadBalancer-Bastion",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-026a6d22a73033461"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:924305315126:vpc/vpc-026a6d22a73033461",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068b9778318fac6f3",
            "default_route_table_id": "rtb-06f626ece276c8b29",
            "default_security_group_id": "sg-0faeaf9eb839cf397",
            "dhcp_options_id": "dopt-08a252ee69a69ce96",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026a6d22a73033461",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f626ece276c8b29",
            "owner_id": "924305315126",
            "tags": {
              "Architecture": "Enhanced 12-subnet design",
              "Environment": "prod",
              "Name": "clixx-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Architecture": "Enhanced 12-subnet design",
              "Environment": "prod",
              "Name": "clixx-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}